--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.6.1",
     "negotiator": "^1.0.0",
-    "next": "15.3.4",
+    "next": "^15.3.6",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
