--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@formatjs/intl-localematcher": "^0.6.1",
     "negotiator": "^1.0.0",
     "next": "^15.3.6",
+    "next-intl": "^4.6.0",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
