--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,5 +7,5 @@
   "printWidth": 120,
   "tabWidth": 2,
   "endOfLine": "crlf",
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"]
 }
