--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "resume",
   "version": "0.1.0",
+  "sideEffects": [
+    "*.css"
+  ],
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -35,6 +38,7 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
     "prettier": "^3.6.2",
+    "prettier-plugin-organize-imports": "^4.3.0",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
