--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.6.1",
+    "@vercel/blob": "^1.1.1",
     "negotiator": "^1.0.0",
     "next": "^15.3.6",
     "next-intl": "^4.6.0",
