--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.6.1",
     "@vercel/blob": "^1.1.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.27.0",
+    "lucide-react": "^0.562.0",
     "negotiator": "^1.0.0",
     "next": "^15.3.6",
     "next-intl": "^4.6.0",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
